--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -27,6 +27,8 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "giphy-api": "^2.0.1",
     "react": "16.2",
     "react-dom": "16.2"
   },
